# autoexpense3

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  app.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: deploy.yml  makefile.yml
autoexpense3/models/: expense.py  repository.py  user.py
autoexpense3/web_app/: app.py  app_builder.py  application.py  constants.py  expenses_router.py  webpage_router.py
autoexpense3/web_app/templates/: base.html  expenses.html  fragment_expenses.html  fragment_expenses_edit_form.html  homepage.html  login.html  register.html
scripts/: autoexpense_webapp.service  deploy.sh  restart.sh  run_app.sh
tests/: conftest.py  utilities.py  utilities_html.py  utilities_html_test.py
tests/deployed_production/: conftest.py  webapp_test.py
tests/deployed_server/: webapp_test.py
tests/deployed_stagging/: add_expense_test.py  conftest.py  homepage_test.py  utilities_expense.py  utilities_test.py
tests/system/: add_expense_test.py  builder_test.py  conftest.py  homepage_test.py  utilities.py  utilities_test.py
tests/system/api/: expense_test.py
tests/system/webpage/: homepage_test.py  user_expenses_test.py
tests/unit/: conftest.py  expense_test.py  repository_test.py
tests/unit/web_app/: builder_test.py
