[project]
name = "autoexpense3"
version = "0.1.0"
description = "Webapp to catalog automobile expense"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi>=0.115.6",
    "pytest-cov>=6.0.0",
    "pytest-playwright>=0.6.2",
    "radon>=6.0.1",
    "requests>=2.32.3",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.6",
    "mypy>=1.14.1",
    "pre-commit>=4.1.0",
    "pylint>=3.3.3",
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "types-beautifulsoup4>=4.12.0.20241020",
    "types-requests>=2.32.0.20241016",
]
